# discord-bot

./: .gitignore  Pipfile  Readme.md  bot.py  main.py  pyproject.toml  run.sh
cogs/: connectfour.py  core.py  errorhandler.py  markov.py  minecraft.py  misc.py  moderation.py  rocketleague.py  twitch.py  xkcd.py
cogs/utils/: common.py
plugins/: connectfour.py  core.py  errorhandler.py  markov.py  minecraft.py  music.py  rocketleague.py  trivia.py  twitch.py
plugins/utils/: checks.py  common.py
