[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "A general-purpose discord bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
markovify = "^0.9.3"
"discord.py" = "~1.7.0"
aiohttp = "^3.7.4"
uvloop = [
    { version = '*', platform = 'linux'},
]

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
